# leafc

./: .clippy.toml  .dockerignore  .editorconfig  .gitignore  .leafc_history  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  BUILD_SYSTEM.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  TODOS.md  about.hbs  about.toml  cliff.toml  deny.toml  licenses.html  renovate.json  rustfmt.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: audit.yaml  ci.yaml
.trunk/: trunk.yaml
crates/compiler/leafc_arena/: Cargo.toml
crates/compiler/leafc_arena/src/: lib.rs  macros.rs
crates/compiler/leafc_cfg/: Cargo.toml
crates/compiler/leafc_cfg/src/: cli.rs  defs.rs  features.rs
crates/compiler/leafc_cfg/src/lang/: mod.rs
crates/compiler/leafc_cfg/src/settings/: emit.rs  log.rs  mod.rs  repl.rs
crates/compiler/leafc_cfg/src/settings/meta/: build_meta.rs  mod.rs  pkg.rs
crates/compiler/leafc_data_structures/: Cargo.toml
crates/compiler/leafc_data_structures/src/: collections.rs  lib.rs
crates/compiler/leafc_data_structures/src/algo/: macros.rs
crates/compiler/leafc_database/: Cargo.toml
crates/compiler/leafc_database/src/: lib.rs
crates/compiler/leafc_driver/: Cargo.toml
crates/compiler/leafc_driver/src/: lib.rs
crates/compiler/leafc_errors/: Cargo.toml
crates/compiler/leafc_errors/src/: cfg.rs  driver.rs  lib.rs  syntax.rs
crates/compiler/leafc_hir/: Cargo.toml
crates/compiler/leafc_hir/src/: db.rs  lib.rs
crates/compiler/leafc_intern/: Cargo.toml  README.md
crates/compiler/leafc_intern/src/: generic.rs  hash.rs  lib.rs  string.rs
crates/compiler/leafc_intern/src/generic/: foo.bs  mod.rs
crates/compiler/leafc_lexer/: Cargo.toml  LEXER.md
crates/compiler/leafc_lexer/src/: lexer.rs  lib.rs
crates/compiler/leafc_lexer/src/language_check/: mod.rs
crates/compiler/leafc_lexer/src/token/: kinds.rs  macros.rs  mod.rs
crates/compiler/leafc_lexer/tests/: lexer.rs
crates/compiler/leafc_lexer/tests/tokens/: identifiers.rs  keywords.rs  literals.rs  mod.rs
crates/compiler/leafc_log/: Cargo.toml
crates/compiler/leafc_log/src/: lib.rs  macros.rs  utils.rs
crates/compiler/leafc_macros/: Cargo.toml
crates/compiler/leafc_macros/src/: doc.rs
crates/compiler/leafc_macros/src/prelude/: hash.rs  utils.rs
crates/compiler/leafc_macros/src/prelude/features/: allocative.rs  mod.rs  serde.rs
crates/compiler/leafc_parser/: Cargo.toml  build.rs
crates/compiler/leafc_parser/src/: event.rs  lib.rs  parser.rs
crates/compiler/leafc_parser/src/grammar/: mod.rs
crates/compiler/leafc_parser/src/grammar/lalrpop/: leaf.lalrpop  mod.rs
crates/compiler/leafc_parser/src/recursive_descent/: mod.rs
crates/compiler/leafc_syntax/: Cargo.toml
crates/compiler/leafc_syntax/src/: lib.rs  macros.rs  syntax_kind_ext.rs  syntax_tree.rs
crates/compiler/leafc_syntax/src/ast/: mod.rs  token_ext.rs
crates/compiler/leafc_syntax/src/cst/: node_ext.rs  traits.rs
crates/compiler/leafc_syntax/src/syntax_gen/: input.rs  sourcegen.rs  utils.rs
crates/compiler/leafc_syntax/src/ungrammar/: leaf.ungram
crates/compiler/leafc_utils/: Cargo.toml
crates/compiler/leafc_utils/src/: collections.rs  lib.rs  terminal.rs
crates/compiler/leafc_utils/src/codemap/: cursor.rs  file.rs  mod.rs  span.rs  text.rs
crates/compiler/leafc_utils/src/string/: distance.rs
crates/ide/leafc_lsp/: Cargo.toml
crates/leafc/: Cargo.toml
crates/leafc/src/: entry.rs  main.rs
crates/leafc_build/: Cargo.toml  README.md
crates/leafc_cfg/: Cargo.toml  build.rs
crates/leafc_cfg/locales/: de.yml  en.yml
crates/leafc_cfg/src/: cli.rs  leafc_settings.rs  lib.rs  settings.rs
crates/leafc_cfg/src/lang/: mod.rs
crates/leafc_cfg/src/settings/: emit.rs  log.rs  mod.rs  opt.rs  repl.rs  target_triple.rs  version.rs
crates/leafc_cfg/src/settings/meta/: build_meta.rs  logo.rs  mod.rs  version.rs
crates/leafc_cfg/src/settings/metadata/: build_meta.rs  mod.rs  version.rs
crates/leafc_cli/: Cargo.toml
crates/leafc_cli/src/: lib.rs
crates/leafc_database/: Cargo.toml
crates/leafc_db/: Cargo.toml
crates/leafc_driver/: Cargo.toml
crates/leafc_driver/src/: lib.rs
crates/leafc_errors/: Cargo.toml
crates/leafc_errors/src/: cfg.rs  cli.rs  driver.rs  lexer.rs  lib.rs  log.rs  repl.rs  syntax.rs
crates/leafc_intern/: Cargo.toml
crates/leafc_intern/src/: lib.rs
crates/leafc_lexer/: Cargo.toml  TOKEN.md
crates/leafc_lexer/src/: lexer.rs  lib.rs
crates/leafc_lexer/src/token/: group.rs  mod.rs  utils.rs
crates/leafc_lexer/tests/: lexer.rs
crates/leafc_lexer/tests/tokens/: keywords.rs  literals.rs  mathematical_constants.rs  mathematical_symbols.rs  mod.rs  punctuation.rs  superscript_literals.rs
crates/leafc_log/: Cargo.toml
crates/leafc_log/src/: lib.rs  macros.rs  utils.rs
crates/leafc_parser/: Cargo.toml
crates/leafc_parser/src/: lib.rs
crates/leafc_parser/src/lalrpop/: leaf.lalrpop
crates/leafc_repl/: Cargo.toml
crates/leafc_repl/src/: lib.rs  prompt.rs  syntax_highlighter.rs
crates/leafc_syntax/: Cargo.toml  SYNTAX.md  leaf.ungram
crates/leafc_syntax/src/: lib.rs  non_generated_syntax_kind.rs  syntax_kind_nongen.rs  syntax_tree.rs
crates/leafc_syntax/src/ast/: mod.rs  node_ext.rs  node_id.rs  traits.rs
crates/leafc_syntax/src/cst/: token_ext.rs
crates/leafc_syntax/src/syntax_gen/: input.rs  mod.rs  sourcegen.rs  utils.rs
crates/leafc_utils/: Cargo.toml  README.md
crates/leafc_utils/src/: lib.rs  location.rs  regex.rs  string.rs  terminal.rs  time.rs
crates/leafc_utils/src/codemap/: file.rs  mod.rs  text.rs
crates/leafc_utils/src/location/: file.rs  mod.rs
crates/package_manager/leafc_build/: Cargo.toml  README.md
crates/shared/leafc_data_structures/: Cargo.toml
crates/shared/leafc_data_structures/src/: collections.rs  hash.rs  lib.rs  trie.rs
docker/devcontainer/: README.md
docs/: book.toml
docs/src/: AST_SYNTAX_EXAMPLE.md  CHAPTER_1.md  (+5 more)
editors/: GRAMMAR_NAMING_CONVENTIONS.md
~/: .leafc_history
(+185 files in other folders)
