[workspace]
default-members = ["crates/compiler/leafc"]

members = [
    # "examples/",
    # "benches/",

    ###########################################################################
    # Binaries
    ###########################################################################

    # ------------------------------------------------------------------------
    # leafc
    # ------------------------------------------------------------------------
    "crates/compiler/leafc",

    # ------------------------------------------------------------------------
    # leafcdb
    # ------------------------------------------------------------------------
    "crates/tools/leafcdb",

    ###########################################################################
    # Libraries
    ###########################################################################

    "crates/compiler/leafc_arena",
    "crates/compiler/leafc_cfg",
    "crates/compiler/leafc_cli",
    # "crates/leafc_codegen",
    "crates/compiler/leafc_data_structures",
    "crates/compiler/leafc_driver",
    "crates/compiler/leafc_errors",
    "crates/compiler/leafc_hir",
    "crates/compiler/leafc_intern",
    "crates/compiler/leafc_lexer",
    "crates/compiler/leafc_log",
    "crates/compiler/leafc_macros",
    "crates/compiler/leafc_parser",
    "crates/compiler/leafc_repl",
    "crates/compiler/leafc_syntax",
    "crates/compiler/leafc_utils",

    ###########################################################################
    # Vendored Third-Party Libraries
    ###########################################################################
    "crates/third_party/dupe",
    "crates/third_party/dupe_derive",
]

[workspace.package]
version = "0.1.0"
description = "Leafc is a compiler for the Leaf programming language, a polyglot language built on top of an incremental compiler."
authors = ["<iopulanski@gmail.com>"]
repository = "https://github.com/pulanski/rustub"
license-file = "LICENSE"
license = "MIT"
readme = "README.md"
rust-version = "1.68.0"
edition = "2021"
documentation = "https://docs.rs/leafc"
homepage = "https://docs.rs/leafc"
keywords = [
    "compiler",
    "language",
    "rust",
    "llvm",
    "polyglot",
    "salsa",
    "ide",
    "repl",
    "debugger",
]
categories = ["compiler"]
exclude = ["**/tests/**", "**/benches/**"]
include = ["**/README.md", "**/LICENSE", "**/Cargo.toml", "**/Cargo.lock"]

[workspace.badges]

# appveyor = { repository = "pulanski/leafc" }
# travis-ci = { repository = "pulanski/leafc" }
# coveralls = { repository = "pulanski/leafc" }

is-it-maintained-issue-resolution = { repository = "pulanski/leafc" }
is-it-maintained-open-issues = { repository = "pulanski/leafc" }
maintenance = { status = "actively-developed" }

[workspace.dependencies]
ahash = "0.8.3"
allocative = "0.2.0"
amplify = "3.14.1"
anyhow = "1.0.68"
atomic = "0.5"
aquamarine = "0.3.0"
blake3 = "1.3.3"
bincode = "1.3"
bumpalo = "3.9.0"
bytes = "1.3.0"
cfg-if = "1.0.0"
chrono = "0.4"
clap = { version = "4.1.6", features = ["derive"] }
codespan-reporting = "0.11.1"
config = "0.13.3"
crossterm = "0.26.0"
dashmap = { version = "5.4.0", features = ["serde", "rayon", "raw-api"] }
derivative = "2.2.0"
derive_more = "0.99.17"
derive-new = "0.5.9"
dirs-next = "2.0.0"
distance = "0.4.0"
doc-comment = "0.3.3"
cargo-emit = "0.2.1"
fern = "0.6.1"
fxhash = "0.2.1"
gazebo = "0.8.1"
getset = "0.1.2"
hashbrown = "0.13.2"
humantime = "2.1.0"
indexmap = "1.9.2"
indicatif = "0.17.3"
indoc = "2.0.0"
itertools = "0.10.5"
lalrpop = "0.19.8"
lasso = "0.6.0"
lazy_static = "1.4.0"
llvm-sys = "160.0.2"
llvm-ir = "0.8.2"
load_file = "1.0.1"
log = "0.4.17"
logos = "0.12.1"
logos-derive = "0.12.1"
miette = { version = "5.5.0", features = ["fancy"] }
mime = "0.3.16"
num_cpus = "1.15.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
nu-ansi-term = "0.46.0"
once_cell = "1.17.1"
owo-colors = "3.5.0"
parking_lot = { version = "0.12.1", features = ["serde"] }
pretty_assertions_sorted = "1.2.1"
proc-macro2 = "1.0.51"
quote = "1.0.23"
rand = "0.8.5"
rand_regex = "0.15.1"
rayon = "1.6.1"
reedline = { version = "0.16.0", features = ["sqlite"] }
regex = "1.7.1"
rowan = "0.15.10"
rstest = "0.16.0"
rug = "1.19.1"
rust-i18n = "1.1.1"
rusty_ulid = "2.0.0"
rusqlite = "0.28.0"
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
semver = "1.0.16"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_bytes = "0.11.8"
serde_json = "1.0.93"
serde_repr = "0.1.10"
serde_yaml = "0.9.17"
smartstring = "1.0.1"
smol_str = "0.1.24"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
syn = "1.0.107"
sys-locale = "0.2.3"
test-context = "0.1.4"
thiserror = "1.0.38"
threadpool = "1.8"
tracing = "0.1.37"
typed-builder = "0.12.0"
# tokio = { version = "1.25.0", features = ["full"] }
ungrammar = "1.16.1"
wax = "0.5.0"
whoami = "1.3.0"
xshell = "0.2.3"
