[package]
name = "leafc"
version = "0.1.0"
description = "Leafc is a simple, fast, and safe incremental compiler written in Rust."
keywords = ["compiler", "incremental", "rust"]

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
# default = ["buffer_pool", "replacer", "lru_k_replacer"]
# all = ["buffer_pool", "replacer", "lru_replacer", "lru_k_replacer", "serde"]
# serde = ["dep:serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leafc_cli = { path = "../leafc_cli" }
leafc_driver = { path = "../leafc_driver" }

atomic = { workspace = true }
derivative = { workspace = true }
derive_builder = { workspace = true }
log = { workspace = true }
miette = { workspace = true }
num_cpus = { workspace = true }
parking_lot = { workspace = true }
smartstring = { workspace = true }
smol_str = { workspace = true }
tokio = { workspace = true }
