[package]
name = "leafc_cli"
version = "0.1.0"
description = "Command line interface for Leafc (e.g. handles parsing command line arguments)"
keywords = ["leafc", "cli", "command-line-interface"]

categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[lib]
doctest = true

[features]
# default = ["buffer_pool", "replacer", "lru_k_replacer"]
# all = ["buffer_pool", "replacer", "lru_replacer", "lru_k_replacer", "serde"]
# serde = ["dep:serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leafc_cfg = { path = "../leafc_cfg" }

atomic = { workspace = true }
clap = { workspace = true }
derivative = { workspace = true }
derive_builder = { workspace = true }
log = { workspace = true }
miette = { workspace = true }
num_cpus = { workspace = true }
parking_lot = { workspace = true }
smartstring = { workspace = true }
smol_str = { workspace = true }
