[package]
name = "leafc_intern"
version = "0.1.0"
description = "Leafc's interning system, which is used to intern strings and other data structures within the compiler used during the compilation lifecycle."
keywords = ["leafc", "interning", "string", "string interning", "compiler"]

categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[lib]
doctest = true

[features]
multi-threaded = ["lasso/multi-threaded"]

# default = ["buffer_pool", "replacer", "lru_k_replacer"]
# all = ["buffer_pool", "replacer", "lru_replacer", "lru_k_replacer", "serde"]
# serde = ["dep:serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leafc_utils = { path = "../leafc_utils" }

lasso = "0.6.0"
derive_more = { workspace = true }

[dev-dependencies]
pretty_assertions_sorted = { workspace = true }
rstest = { workspace = true }
