[package]
name = "leafc_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leafc_cfg = { path = "../leafc_cfg" }
leafc_errors = { path = "../leafc_errors" }

chrono = { workspace = true }
dirs-next = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
miette = { workspace = true }
whoami = { workspace = true }
