[package]
name = "leafc_parser"
version = "0.1.0"
description = "A recursive descent parser for the Leaf programming language based on Red-Green Syntax Trees"
keywords = ["leafc", "parser", "recursive descent"]

categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[lib]
doctest = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

leafc_syntax = { path = "../leafc_syntax" }
