[package]
name = "leafc_repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leafc_cli = { path = "../leafc_cli" }
leafc_cfg = { path = "../leafc_cfg" }

derive_builder = { workspace = true }
derive-new = { workspace = true }
derivative = { workspace = true }
getset = { workspace = true }
reedline = { workspace = true }
pretty_assertions_sorted = { workspace = true }
smartstring = { workspace = true }
