[package]
name = "leafc_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
derive_more = { workspace = true }
getset = { workspace = true }
owo-colors = { workspace = true }
pretty_assertions_sorted = { workspace = true }
smartstring = { workspace = true }

rand_regex = { workspace = true }
regex_generate = "0.2.1"
rand = "0.8.5"
