[package]
name = "leafc_arena"
description = "The **arena**-based memory management system for **Leafc**"
keywords = ["compiler", "arena", "memory-management"]

version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { workspace = true }
derivative = { workspace = true }
log = { workspace = true }
smartstring = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
pretty_assertions_sorted = { workspace = true }
rstest = { workspace = true }
