[package]
name = "leafc_cfg"
description = "Configuration for Leafc (e.g. \"emit-llvm\",\"emit-asm\", O-level, etc.)"
keywords = ["leafc", "configuration"]

version.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[lib]
doctest = true

[features]
default = []
all = ["multi-threaded", "serde", "allocative", "no-std"]
multi-threaded = []
# multi-threaded = ["dep:atomic", "dep:parking_lot", "dep:crossbeam_utils"]
serde = ["dep:serde"]
no-std = []
allocative = ["dep:allocative"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# multi-threaded = ["dep:parking_lot"]
leafc_macros = { path = "../leafc_macros" }
leafc_errors = { path = "../leafc_errors" }
leafc_utils = { path = "../leafc_utils" }


allocative = { workspace = true, optional = true }
atomic = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
derive-new = { workspace = true }
dirs-next = { workspace = true }
getset = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
miette = { workspace = true }
num_cpus = { workspace = true }
parking_lot = { workspace = true }
pretty_assertions_sorted = { workspace = true }
rust-i18n = { workspace = true }
rusty_ulid = { workspace = true }
salsa = { workspace = true, default-features = false }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
smartstring = { workspace = true }
smol_str = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
sys-locale = { workspace = true }
typed-builder = { workspace = true }
once_cell = { workspace = true }
owo-colors = { workspace = true }

[dev-dependencies]
pretty_assertions_sorted = { workspace = true }
rstest = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
