[package]
name = "leafc_data_structures"
description = "Data structures used by leafc (e.g. HashMaps, Sets, etc.)"
keywords = ["leafc", "data structures", "hashmap", "hashset"]

version.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[features]
default = []
multi-threaded = ["dep:dashmap"]
# hashbrown = ["hashbrown/hashbrown"]
# fxhash = ["fxhash/fxhash"]
# dashmap = ["dashmap/dashmap"]
# blake3 = ["blake3/blake3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { workspace = true }
cfg-if = { workspace = true }
dashmap = { workspace = true, optional = true }
fxhash = { workspace = true }
hashbrown = { workspace = true }
