[package]
name = "leafc_database"
description = "The primary backing database for the Leaf compiler, driver, language server, and associated tooling. Effectively the core for incremetal computation and caching that powers Leaf."
keywords = ["leaf", "compiler", "driver"]

version.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
pretty_assertions_sorted = { workspace = true }
rstest = { workspace = true }
