[package]
name = "leafc_driver"
description = "The main driver for Leafc, the Leaf compiler. Used in both the REPL context and the build context."
keywords = ["leaf", "compiler", "driver"]

version.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[lib]
doctest = true

[features]
# default = ["buffer_pool", "replacer", "lru_k_replacer"]
# all = ["buffer_pool", "replacer", "lru_replacer", "lru_k_replacer", "serde"]
# serde = ["dep:serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leafc_cli = { path = "../leafc_cli" }
leafc_cfg = { path = "../leafc_cfg" }
leafc_errors = { path = "../leafc_errors" }
leafc_lexer = { path = "../leafc_lexer" }
leafc_log = { path = "../leafc_log" }


atomic = { workspace = true }
clap = { workspace = true }
derivative = { workspace = true }
getset = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
miette = { workspace = true }
num_cpus = { workspace = true }
owo-colors = { workspace = true }
parking_lot = { workspace = true }
smartstring = { workspace = true }
smol_str = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
pretty_assertions_sorted = { workspace = true }
rstest = { workspace = true }
