[package]
name = "leafc_errors"
version = "0.1.0"
description = "Error handling for the different subsystems of leafc (e.g. lexer, parser, syntax tree, type checker, etc.)"
keywords = ["leafc", "errors", "error handling"]

categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[lib]
doctest = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leafc_utils = { path = "../leafc_utils" }


codespan-reporting = { workspace = true }
derivative = { workspace = true }
getset = { workspace = true }
miette = { workspace = true }
owo-colors = { workspace = true }
smol_str = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions_sorted = { workspace = true }
rstest = { workspace = true }
