[package]
name = "leafc_hir"
description = "The **HIR** (High-level Intermediate Representation) of the Leaf compiler."
keywords = ["compiler", "leaf", "hir", "intermediate representation", "ir"]

version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
