[package]
name = "leafc_intern"
description = "Leafc's interning system, which is used to intern strings and other data structures within the compiler used during the compilation lifecycle."
keywords = ["leafc", "interning", "string", "string interning", "compiler"]

version.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[lib]
doctest = true

[features]
default = []
multi-threaded = ["lasso/multi-threaded"]
serde = ["dep:serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aquamarine = { workspace = true }
blake3 = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true }
fxhash = { workspace = true }
hashbrown = { workspace = true }
lasso = { workspace = true, features = ["serialize"] }
serde = { workspace = true, optional = true }
smartstring = { workspace = true }

[dev-dependencies]
pretty_assertions_sorted = { workspace = true }
rstest = { workspace = true }
