[package]
name = "leafc_log"
description = "Logging facilities for Leafc (both user-facing and internal)"
keywords = ["leafc", "logging"]

version.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[lib]
doctest = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leafc_cfg = { path = "../leafc_cfg" }
leafc_errors = { path = "../leafc_errors" }

chrono = { workspace = true }
dirs-next = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
owo-colors = { workspace = true }
whoami = { workspace = true }
