[package]
name = "leafc_parser"
description = "A recursive descent parser for the Leaf programming language based on Red-Green Syntax Trees"
keywords = ["leafc", "parser", "recursive descent"]

version.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[lib]
doctest = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leafc_errors = { path = "../leafc_errors" }
leafc_syntax = { path = "../leafc_syntax" }

rowan = { workspace = true }

[build-dependencies]
lalrpop = { workspace = true }
cargo-emit = { workspace = true }
