[package]
name = "leafc_syntax"
version = "0.1.0"
description = "Defines lossless concrete syntax trees for Leaf, based on rowan"
keywords = ["leafc", "syntax", "rowan", "red-green", "concrete-syntax-tree"]

categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[lib]
doctest = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leafc_lexer = { path = "../leafc_lexer" }
leafc_utils = { path = "../leafc_utils" }
leafc_errors = { path = "../leafc_errors" }


doc-comment = { workspace = true }
itertools = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rowan = { workspace = true }
smol_str = { workspace = true }
ungrammar = { workspace = true }
xshell = { workspace = true }
