[package]
name = "leafc_syntax"
description = "Defines lossless concrete syntax trees for Leaf, based on rowan"
keywords = ["leafc", "syntax", "rowan", "red-green", "concrete-syntax-tree"]

version.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[lib]
doctest = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leafc_lexer = { path = "../leafc_lexer" }
leafc_macros = { path = "../leafc_macros" }
leafc_utils = { path = "../leafc_utils" }
leafc_diagnostics = { path = "../leafc_diagnostics" }

cfg-if = { workspace = true }
cstree = { workspace = true }
doc-comment = { workspace = true }
itertools = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rowan = { workspace = true }
smol_str = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
ungrammar = { workspace = true }
xshell = { workspace = true }
